# fireasmserver

./: .clang-tidy  .gitignore  COPYRIGHT  DECISIONS.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
.github/workflows/: cd-matrix.yml  python-gates.yml
arch/aarch64/: Makefile
arch/x86_64/: Makefile
docs/: ROADMAP.md  observability.md
docs/l2/: DESIGN.md  HARNESS.md  REQUIREMENTS.md  STATUS.md  TEST_PLAN.md  TX_API.md
docs/side_sessions/: 2026-04-19_audit_ontology.md  2026-04-19_crc32_ieee.md  2026-04-19_crc32_pclmul_foldbyn.md  2026-04-19_side_session_bootstrap.md  2026-04-21_sha256.md  2026-04-22_aes128.md  2026-04-23_aes128_gcm.md
tooling/: build_qemu_harness_ontology.py  qemu-harness.json
tooling/apt_cache/: laptop_setup.sh  pi_setup.sh
tooling/crypto_tests/: Makefile  aes128_gcm_test.c  aes128_gcm_vectors.h  aes128_test.c  aes128_vectors.h  crc32_test.c  derive_fold_constants.py  sha256_test.c  sha256_vectors.h  vectors.h
tooling/firecracker/: install_prebuilt_on_pi.sh
tooling/hooks/: asm_syntax_lint.sh  discipline_pretooluse.sh  install.sh  pre_commit.sh  pre_push.sh
tooling/memlayout_diffharness/: Makefile  alloc_driver.c  bcvm_abi.h  bcvm_errors.inc  bcvm_errors.nasm.inc  driver.c
tooling/osaca/: run.sh
tooling/pi5_build/: backup_pi_dd.sh  backup_pi_rsync.sh  build_pi_image.sh  build_pi_kernel.sh  flash_sd_card.sh
tooling/qemu_build/: build_qemu_fork.sh  env.sh
tooling/tests/: conftest.py  test_aes128.py  test_aes128_gcm.py  test_audit_ontology.py  test_branch_cov_cli.py  test_branch_cov_coverage.py  test_branch_cov_disasm.py  test_branch_cov_trace.py  test_cli.py  test_crc32_ieee.py  test_derive_fold_constants.py  test_discipline_cli.py  test_discipline_decisions.py  test_discipline_markers.py  test_discipline_relevance.py  test_guest_builder.py  test_memlayout_alloc_diff.py  test_memlayout_allocator.py  test_memlayout_bytecode.py  test_memlayout_diff.py  test_memlayout_properties.py  test_memreq_codegen_cli.py  test_memreq_codegen_emitter.py  test_memreq_codegen_encoding.py  test_memreq_codegen_schema.py  test_memreq_codegen_vm_differential.py  test_ontology_dag.py  test_ontology_dag_concurrent.py  test_ontology_models.py  (+12 more)
(+149 files in other folders)
